log
Fri, Apr 18, 2025 12:52:01 AM: 
 hashmap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:62:9: error: 'return' with no value, in function returning non-void [-Werror]
         return;
         ^~~~~~
hashmap.c:54:11: note: declared here
 HashMap * createMap(long capacity) {
           ^~~~~~~~~
cc1.exe: all warnings being treated as errors
eeef3b7
Fri, Apr 18, 2025 12:53:01 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4afd8a8
Fri, Apr 18, 2025  1:03:15 AM: 
 hashmap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  1|5
total_score: 10/70
b39e617
Fri, Apr 18, 2025  1:04:46 AM: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  5|4
total_score: 30/70
007e8d9
Fri, Apr 18, 2025  1:15:36 AM: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  8|3
total_score: 40/70
e351744
Fri, Apr 18, 2025  1:21:08 AM: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:95:30: error: statement with no effect [-Werror=unused-value]
     map->buckets[index]->key == NULL;
                              ^
cc1.exe: all warnings being treated as errors
618cf4e
Fri, Apr 18, 2025  1:21:20 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 40/70
b048b05
Fri, Apr 18, 2025  1:24:27 AM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 40/70
aa58537
Fri, Apr 18, 2025  1:26:50 AM: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  9|3
total_score: 40/70
1859ca8
Fri, Apr 18, 2025  1:28:14 AM: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:104:12: error: 'return' with a value, in function returning void [-Werror]
     return NULL;
            ^~~~
hashmap.c:93:6: note: declared here
 void eraseMap(HashMap * map,  char * key) {
      ^~~~~~~~
cc1.exe: all warnings being treated as errors
1de988e
Fri, Apr 18, 2025  1:28:27 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
a1116bb
Fri, Apr 18, 2025  1:34:27 AM: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  11|2
total_score: 50/70
0f34104
Fri, Apr 18, 2025  1:35:34 AM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'firstMap':
hashmap.c:125:22: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
         map->current = map->buckets[0];
                      ^
cc1.exe: all warnings being treated as errors
2e9edcc
Fri, Apr 18, 2025  1:38:51 AM: 
 hashmap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  12|2
total_score: 50/70
a4fff80
Fri, Apr 18, 2025  1:40:51 AM: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  12|2
total_score: 50/70
dc1aeea
Fri, Apr 18, 2025  1:43:57 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
9d9a29b
Fri, Apr 18, 2025  1:51:56 AM: 
 hashmap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:76:39: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
     for(long k = 0 ; k < old_capacity , k++){
                                       ^
hashmap.c:76:44: error: expected ';' before ')' token
     for(long k = 0 ; k < old_capacity , k++){
                                            ^
cc1.exe: all warnings being treated as errors
6213a6c
Fri, Apr 18, 2025  1:52:09 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|0
total_score: 70/70
473d689
Fri, Apr 18, 2025  1:54:34 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|0
total_score: 70/70
3cd37ae
Fri, Apr 18, 2025 12:27:30 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|0
total_score: 70/70
806cc4e
Fri, Apr 18, 2025 12:36:49 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|0
total_score: 70/70
c4d6e14
Fri, Apr 18, 2025 12:39:00 PM: 
 hashmap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  17|0
total_score: 70/70
f609398
Fri, Apr 18, 2025 12:41:23 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|0
total_score: 70/70
45d559c
Fri, Apr 18, 2025 12:42:07 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|0
total_score: 70/70
c0b9030
Fri, Apr 18, 2025 12:44:15 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|1
total_score: 60/70
64f5896
